-----

0.1.6    TO BE RELEASED
   [Fixed]
       * `get_cpu_map` broken by migration to Object::Pad
       * Connection closing time-out should have been relative
       * Invocation of non-existing `Future->await_any` to `->wait_any`
       * Missing `await` in `get_cpu_map` in call to async function

0.1.5    2025-09-06
   [Changed]
       * Updated to libvirt tag v11.7.0 (from v11.6.0)
       * No actual changes

0.1.4    2025-08-05
   [Added]
       * New constants:
         * Sys::Async::Virt->BASELINE_CPU_IGNORE_HOST
         * Sys::Async::Virt::Domain->EVENT_STARTED_RECREATED
         * Sys::Async::Virt::Domain->EVENT_STOPPED_RECREATED
   [Changed]
       * Updated to libvirt tag v11.6.0 (from v11.5.0)

0.1.3    2025-07-13
   [Changed]
       * Removed ':repr()' attributes from classes inheriting
         from IO::Async::Notifier; Object::Pad will automatically
         select 'HASH' as the representation.

0.1.2    2025-07-13
   [Fixed]
       * Syntax error in Sys::Async::Virt::Connection::SSH

0.1.1    2025-07-13
   [Fixed]
       * Removed undeclared dependency Carp::Always

0.1.0    2025-07-12
   [Changed]
       * Rewritten to use Object::Pad instead of blessed hashes as objects
         This should not be breaking as the API remained the same.
   [Fixed]
       * eg/wait-domain-state.pl: domain name now taken from command line
         (removed hard-coded domain name)

0.0.21   2025-07-11
   [Changed]
       * Updated to libvirt tag v11.5.0 (from v11.4.0)

0.0.20   2025-05-04
    [Changed]
       * Updated to libvirt tag v11.4.0 (from v11.3.0)

0.0.19   2025-05-12
    [Added]
       * New domain entrypoints: del_throttle_group(), set_throttle_group(),
         get_autostart_once(), set_autostart_once()
       * New GUEST_INFO_* and STATS_* domain API related constants (from 11.2.0)
       * New SAVE_PARAM_IMAGE_FORMAT and SAVE_PARAM_PARALLEL_CHANNEL
         domain API related constants (from 11.2.0)
    [Changed]